--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="Shree jee.jpg" class="card-img-top" alt="...">
+      <img src="shree jee.avif" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"> Shree Jee Bhawan</h5>
         <p class="card-text"> </p>
@@ -185,7 +185,7 @@
 
     </div>
     <h3 style="background-color: black; margin: 0; padding: 0; color: white; text-align: center;">&copy; 2021 Copyright:
-      travels.com</h3>
+      chitrakoot-travellers.com</h3>
   </footer>
 
 
