--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="shree jee.avif" class="card-img-top" alt="...">
+      <img src="shree jee hotel.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"> Shree Jee Bhawan</h5>
         <p class="card-text"> </p>
