--- a/places.html
+++ b/places.html
@@ -59,7 +59,7 @@
   <p style="text-align: center; font-size: 25px; color: rgb(27, 40, 4); margin: 0vw 8vw;">Chitrakoot is a Gram Panchayat in the district of Madhya Pradesh. If you have read Ramayana, you must have come across this place there. It is not that the place has any special temple of Lord Rama, but there are a lot of places that could be related to the instances of Ramayana. This was a place where Lord Rama, Laxman and Sita visited during their exile. When you will visit this place, you will come to know about a lot of such things that are not even discussed in books.
 
     Apart from that, this place has a lot of historical places to visit. It is the part of Rewa, which itself is popular for being one of the most popular capitals of different kings. So, there are a lot of reasons for which one should visit the beautiful town of Chitrakoot. If you want to visit the places of religious significance here, then here is a list of some of the most important temples in Chitrakoot.</p>
-    <img src="kamtanath-Mandir-Kamadgiri.jpg" class="rounded mx-auto d-block" alt="..." style="height:80vh;">
+    <img src="IMG_20230506_231547_896.jpg" class="rounded mx-auto d-block" alt="..." style="height:80vh;">
     
      <p style="text-align: center; font-size: 25px; color: rgb(27, 40, 4); margin: 0vw 8vw;"> This temple is of utmost importance for Hindu pilgrims. It is said that this temple is located on a hill where Lord Rama, Laxman and Sita used to dwell, during their stay in the woods. The literal meaning of Kamadgiri is where all your desires get fulfilled. Well, that is probably one of the greatest reasons for which this temple has got so much crowd.
 
